# SkyMail

./: .env.example  .env.example.production  CD_FIXED.md  Dockerfile  README.md  TEST_DATA.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 12ed19dc76f2_newsletter_templates_v2.py  16e53094325a_added_constant_values_in_campagain.py  3_fix_campaign_send_logs_columns.py  4380e658f93c_newsletter_templates_v3.py  46199e99c68a_initial_schema.py  5e759e25cd12_initial_schema.py  bc35b8df7197_migration_of_subscriber_email_.py  c04d0b6069e0_.py  d493eb9aaf6e_migration_of_username_on_subscribers.py
app/: main.py
app/database/: database.py  models.py
app/modules/auth/: __init__.py  auth_service.py  model.py  routes.py  schemas.py
app/modules/billing/: model.py  routes.py  service.py
app/modules/campaign/: model.py  routes.py  schemas.py  service.py
app/modules/newsletters/: model.py
app/modules/subscribers/: model.py  service.py
app/redis/: __init__.py  redis_manager.py
app/utils/: constants.py  exceptions.py  jwt_handler.py  password_handler.py
app/utils/mail/: email_service.py  mail_config.py
app/workers/: campaign_send.py
web/: BUILD_STATUS.js  middleware.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  providers.tsx
web/app/dashboard/: page.tsx
web/components/billing/: razorpay-checkout.tsx
web/components/ui/: button.tsx
web/lib/: api-client.ts  pricing.ts  token-storage.ts  utils.ts
(+52 files in other folders)
